--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,9 +5,11 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "aiosmtplib>=5.0.0",
     "asyncpg>=0.31.0",
+    "beautifulsoup4>=4.14.3",
     "fastapi>=0.121.2",
-    "pre-commit>=4.5.0",
+    "logfire[fastapi]>=4.15.1",
     "pwdlib[argon2]>=0.3.0",
     "pydantic>=2.12.4",
     "pydantic-settings>=2.12.0",
@@ -19,5 +21,6 @@ dependencies = [
 [dependency-groups]
 dev = [
     "fastapi[standard]>=0.121.2",
+    "pre-commit>=4.5.0",
     "pytest>=9.0.1",
 ]
