--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,9 +21,11 @@ dependencies = [
 [dependency-groups]
 dev = [
     "alembic>=1.17.2",
+    "black>=25.12.0",
     "fastapi[standard]>=0.121.2",
     "hypothesis>=6.148.7",
     "pre-commit>=4.5.0",
     "psycopg[binary]>=3.3.2",
     "pytest>=9.0.1",
+    "ruff>=0.14.11",
 ]
