--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "aiosmtplib>=5.0.0",
     "asyncpg>=0.31.0",
     "beautifulsoup4>=4.14.3",
     "fastapi>=0.121.2",
+    "google-api-python-client>=2.188.0",
+    "google-auth>=2.47.0",
+    "google-auth-httplib2>=0.3.0",
+    "google-auth-oauthlib>=1.2.4",
     "logfire[fastapi]>=4.15.1",
     "pwdlib[argon2]>=0.3.0",
     "pydantic>=2.12.4",
